Uploaded image for project: 'Apache Avro'
  1. Apache Avro
  2. AVRO-502

Memory leak from parsing JSON schema.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 1.3.2
    • 1.4.0
    • c
    • None
    • Linux 2.6.28 Gentoo

    Description

      the avro_schema_from_json() function seems to leak memory, even after the reference to the schema is released.

      I will attache output from valgrind.

      Attachments

        1. test_schema_leaks_with_map_and_union.c
          2 kB
          Robert G. Jakabosky
        2. schema_leaks2.patch
          0.9 kB
          Robert G. Jakabosky
        3. avro_leak_with_debug.log
          16 kB
          Robert G. Jakabosky

        Activity

          People

            neopallium Robert G. Jakabosky
            neopallium Robert G. Jakabosky
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: