AVRO-502. Memory leak from parsing JSON schema. Contributed by Robert G. Jakabosky.

git-svn-id: https://svn.apache.org/repos/asf/hadoop/avro/trunk@930698 13f79535-47bb-0310-9956-ffa450edef68